Day 29 - create weather api root page and api page

--- a/templates/home.html
+++ b/templates/home.html
@@ -2,17 +2,11 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>My Webpage</title>
+    <title>Weather API</title>
 </head>
 <body>
-    <nav>
-        <a href="/about/">about</a>
-    </nav>
-    <h1> This is my webpage</h1>
-    <h2> Here is a brief description</h2>
-    <p> Hello </p>
-    <img src="{{url_for('static', filename='cat.png')}}" style="width:500px">
-    <br>
-    <a href="https://google.com">Google page</a>
+<h1>Weather API</h1>
+<p>URL Format: http://127.0.0.1:5000/api/v1/station/date</p>
+<p>URL Example: http://127.0.0.1:5000/api/v1/10/19881025</p>
 </body>
 </html>
